# autogit

./: .editorconfig  .env.core.example  .env.example  .env.homelab.example  .env.k8s.example  .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.example.yml  .gitlab-ci.yml  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yaml.new  .secrets.baseline  AGENT_WORK_SUMMARY.md  AUTHENTICATION_SETUP_PROGRESS.md  AUTOMATED_WORKFLOW_DOCS_INDEX.md  BRANCH_ANALYSIS.md  BRANCH_AUDIT_COMPLETE.md  BRANCH_INDEX.md  BRANCH_PROTECTION_GUIDE.md  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATE_SUMMARY.md  DEPLOYMENT_READINESS.md  DEVELOPMENT_WORKFLOWS_COMPLETE.md  DEV_TO_MAIN_PR_SUMMARY.md  DOCKER_CACHE.md  EXECUTIVE_SUMMARY.md  FAQ.md  GIT_SERVER_FEATURE_PLAN.md  GLOSSARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSES.md  MANAGER_DELEGATION.md  MULTI_ARCH_STRATEGY.md  Makefile  NEW_REQUIREMENTS_MULTI_ARCH.md  (+32 more)
.git-hooks/: pre-commit-wrapper
.github/: AGENTIC_WORKFLOW.md  AUTO_MERGE_SETUP.md  BRANCH_PROTECTION.md  CODEOWNERS  MERGE_PLAN.md  README.md  dependabot.yml  labels.yml
argocd/: PRIVATE_VALUES_SETUP.md  README.md
autogit-core/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SESSION_SUMMARY.md  build.sh  docker-compose.yml
autogit-core/docs/: shell-completions.md
autogit-core/src/: error.rs  lib.rs
autogit-core/src/config/: env.rs  file.rs  mod.rs
autogit-core/src/credentials/: mod.rs  store.rs
autogit-core/src/gitlab/: auth.rs  client.rs  mod.rs  projects.rs  runners.rs  tokens.rs  users.rs
config/: .yamllint.yml  config.yml  container-labels.env
docs/: ARCHITECTURE.md  AUTOMATED_WORKFLOWS.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  INDEX.md  LICENSES.md  ROADMAP.md
environments/: default.yaml  homelab.yaml  production.yaml  staging.yaml
homelab-migration/: BEAST_MODE_CONFIG.md  DEPLOYMENT_ERROR_ANALYSIS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_READY.md  HTTPS-SETUP.md  OPTIMIZED_DEPLOYMENT_STATUS.md  PERFORMANCE_OPTIMIZATION.md  PORT_CONFLICT_FIX.md  README.md  ROOTLESS_FIX.md  SMOKE_TEST.md  SMOKE_TEST_RESULTS.md  TERRAFORM_BACKLOG.md  analyze-deployment.sh  analyze-resources.sh  backup-gitlab.sh  bootstrap-gitlab-api.sh  bootstrap-gitlab-users.sh  capture-logs.sh  check-status.sh  configure-gitlab-fresh.py  configure-gitlab.py  credential-manager.sh  debug-capture.sh  deploy-clean.sh  (+29 more)
(+297 files in other folders)
