[project]
name = "autogit"
version = "0.3.0"
description = "Self-Hosted GitOps Platform with Dynamic Multi-Architecture Runner Management and Automated Workflows"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "docker>=7.1.0",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
