[package]
name = "autogit-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Type-safe GitLab automation for self-hosted GitOps"
license = "MIT"
repository = "https://github.com/tzervas/autogit"

[[bin]]
name = "autogit"
path = "src/bin/autogit.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
# HTTP client with connection pooling
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Secret handling - zeroes memory on drop
secrecy = { version = "0.10", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation (for passwords)
rand = "0.8"

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Shell completion generation
clap_complete = "4.5"
clap_complete_nushell = "4.5"

# TOML config
toml = "0.9"

# System info
hostname = "0.4"

# URL encoding for API paths
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = []
